objects/SBQQ__QuoteLine__c/fields/A_la_carte_Required_SKUs__c.field-meta.xml
<CustomField>
    <fullName>A_la_carte_Required_SKUs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This SKU is Required for a-la-carte purchases.</description>
    <label>A-la-carte Required SKUs</label>
    <type>Checkbox</type>
</CustomField>