objects/SBQQ__QuoteLine__c/fields/ActiveOperatorsScreenShare__c.field-meta.xml
<CustomField>
    <fullName>ActiveOperatorsScreenShare__c</fullName>
    <formula>SBQQ__Quote__r.Active_Operators_Screen_Share__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Total Operators count from the quote.</inlineHelpText>
    <label>Total Operators (Screen Share)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>