objects/SBQQ__QuoteLine__c/fields/Add_to_Day_1_ARR__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Day_1_ARR__c</fullName>
    <formula>IF( 
 AND(
 ISBLANK( SBQQ__RenewedSubscription__c ),
 SBQQ__EffectiveStartDate__c &lt;= Day_1_ARR_Start_Date__c,
 SBQQ__EffectiveEndDate__c &gt;=Day_1_ARR_Start_Date__c), True, 
False
)</formula>
    <label>Add to Day 1 ARR</label>
    <type>Checkbox</type>
</CustomField>