objects/SBQQ__QuoteLine__c/fields/AEM_Endpoint_Management_Overlap_SKU__c.field-meta.xml
<CustomField>
    <fullName>AEM_Endpoint_Management_Overlap_SKU__c</fullName>
    <formula>SBQQ__Product__r.AEM_Endpoint_Management_Overlap_SKU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AEM Endpoint Management Overlap SKU</label>
    <type>Checkbox</type>
</CustomField>