objects/SBQQ__QuoteLine__c/fields/AEM_Incident_Response_Overlap_SKU__c.field-meta.xml
<CustomField>
    <fullName>AEM_Incident_Response_Overlap_SKU__c</fullName>
    <formula>SBQQ__Product__r.AEM_Incident_Response_Overlap_SKU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AEM Incident Response Overlap SKU</label>
    <type>Checkbox</type>
</CustomField>