objects/SBQQ__QuoteLine__c/fields/AEM_Risk_Compliance_Overlap_SKU__c.field-meta.xml
<CustomField>
    <fullName>AEM_Risk_Compliance_Overlap_SKU__c</fullName>
    <formula>SBQQ__Product__r.AEM_Risk_Compliance_Overlap_SKU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AEM Risk &amp; Compliance Overlap SKU</label>
    <type>Checkbox</type>
</CustomField>