objects/SBQQ__QuoteLine__c/fields/AEM_Solution__c.field-meta.xml
<CustomField>
    <fullName>AEM_Solution__c</fullName>
    <description>Referenced in Product Rules, Price Rules, and Quote Approval Rules</description>
    <formula>SBQQ__Product__r.AEM_Solution__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AEM Solution</label>
    <type>Checkbox</type>
</CustomField>