objects/SBQQ__QuoteLine__c/fields/AEM_Solution_Mapping__c.field-meta.xml
<CustomField>
    <fullName>AEM_Solution_Mapping__c</fullName>
    <description>Leveraged in Price and Product Rules.  Map from legacy SKUs to new AEM Solutions. SS-10578</description>
    <label>AEM Solution Mapping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AEM_Solution_Mapping</valueSetName>
    </valueSet>
</CustomField>