objects/SBQQ__QuoteLine__c/fields/Allocated_Net_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Net_Unit_Price__c</fullName>
    <description>Calculated with Price Rule.</description>
    <label>Allocated Net Unit Price</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>