objects/SBQQ__QuoteLine__c/fields/Allocation__c.field-meta.xml
<CustomField>
    <fullName>Allocation__c</fullName>
    <description>Twin Field: Allocation from Product Option.</description>
    <label>Allocation %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>