objects/SBQQ__QuoteLine__c/fields/Allowable_Volume_Discount__c.field-meta.xml
<CustomField>
    <fullName>Allowable_Volume_Discount__c</fullName>
    <description>Used for reference within the QLE. Not to be editable by any user apart from Administrators. Populated via Price Rule - QL - Stamp Allowable Volume Discount. SS-8974*</description>
    <label>Allowable Volume Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>