objects/SBQQ__QuoteLine__c/fields/Annual_ESR__c.field-meta.xml
<CustomField>
    <fullName>Annual_ESR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Premium ESR SKU that requires a minimum 12 term.  TwinField from Product.  Reference in Product Rule.</description>
    <label>Annual ESR</label>
    <type>Checkbox</type>
</CustomField>