objects/SBQQ__QuoteLine__c/fields/Annual_Software_Price__c.field-meta.xml
<CustomField>
    <fullName>Annual_Software_Price__c</fullName>
    <formula>IF(
  AND(
    NOT(
      OR(
        SBQQ__ProductFamily__c = &quot;Premium Support&quot;,
        SBQQ__ProductFamily__c = &quot;Training&quot;,
        SBQQ__ProductFamily__c = &quot;Hardware&quot;,
        SBQQ__ProductFamily__c = &quot;Marketing&quot;
      )
    ),
    NOT( ISBLANK( SBQQ__ProductFamily__c ) )
  ),
  SBQQ__NetPrice__c / SBQQ__ProrateMultiplier__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Software Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>