objects/SBQQ__QuoteLine__c/fields/Annualized_Software_Spend__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Software_Spend__c</fullName>
    <formula>ARR_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualized Software Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>