objects/SBQQ__QuoteLine__c/fields/Annualized_Software_Spend_Calc__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Software_Spend_Calc__c</fullName>
    <description>Calculated ARR Annualized Spend for eligible lines.</description>
    <formula>IF( 
 AND(
 Include_In_Annualized_Software_Spend__c, Include_in_Exit_ARR__c),( SBQQ__NetPrice__c * SBQQ__EffectiveQuantity__c) / SBQQ__ProrateMultiplier__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualized Software Spend Calc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>