objects/SBQQ__QuoteLine__c/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <formula>/*IF( 
 AND( 
  ISPICKVAL(SBQQ__SubscriptionType__c, &apos;Renewable&apos;), 
  NOT(ISBLANK( Tanium_Pricing_Schedule__c))),((  (Unit_Price_Variance__c *  SBQQ__EffectiveQuantity__c ) /(  of_days_between_dates__c )) * 365 ),
  
IF( 
   ISPICKVAL(SBQQ__SubscriptionType__c, &apos;Renewable&apos;), ((SBQQ__NetTotal__c /(  of_days_between_dates__c )) * 365 ),0
    )
   )
*/
IF(
AND(
Exclude_from_ARR__c == False,
NOT(ISBLANK( Tanium_Pricing_Schedule__c))),
(( (Unit_Price_Variance__c * SBQQ__EffectiveQuantity__c ) /(( End_Date__c - SBQQ__StartDate__c ) +1) ) * 365),

IF(
Exclude_from_ARR__c == False,
((SBQQ__NetTotal__c /(( End_Date__c - SBQQ__StartDate__c ) +1) ) * 365 ),
0
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEPRECATED - ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>