objects/SBQQ__QuoteLine__c/fields/ARR_After_Marketplace__c.field-meta.xml
<CustomField>
    <fullName>ARR_After_Marketplace__c</fullName>
    <formula>ARR_Amount__c - (ARR_Amount__c * SBQQ__Quote__r.Marketplace_ARR_Impact_Percent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The ARR Amount of this quote line minus the Marketplace impact amount</inlineHelpText>
    <label>ARR After Marketplace</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>