objects/SBQQ__QuoteLine__c/fields/ARR_Amount__c.field-meta.xml
<CustomField>
    <fullName>ARR_Amount__c</fullName>
    <description>The value represents the amount of the ARR for this line item.  This field is set via CPQ Price Rule.</description>
    <label>ARR Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>