objects/SBQQ__QuoteLine__c/fields/ARR_Amount_Prorate_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>ARR_Amount_Prorate_Multiplier__c</fullName>
    <formula>IF(ISBLANK(Tanium_Pricing_Schedule__c), (SBQQ__NetPrice__c *  SBQQ__EffectiveQuantity__c) / SBQQ__ProrateMultiplier__c, (Unit_Price_Variance__c *  SBQQ__EffectiveQuantity__c) / SBQQ__ProrateMultiplier__c)

/*
IF(ISBLANK(Tanium_Pricing_Schedule__c), (SBQQ__NetPrice__c *  SBQQ__EffectiveQuantity__c) / SBQQ__ProrateMultiplier__c, (Unit_Price_Variance__c *  SBQQ__Quantity__c) / SBQQ__ProrateMultiplier__c)
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Uses the CPQ Prorate Multiplier to remove the calculation differences that may result from using a daily calculation</inlineHelpText>
    <label>ARR Amount (Prorate Multiplier)</label>
    <precision>18</precision>
    <scale>12</scale>
    <type>Currency</type>
</CustomField>