objects/SBQQ__QuoteLine__c/fields/ARV_Calc_2__c.field-meta.xml
<CustomField>
    <fullName>ARV_Calc_2__c</fullName>
    <description>06/29.2023 - Changed the label. ARV is a deprecated financial model</description>
    <formula>IF(Term_Computed__c=0,0,IF(TRAC_IncludeInARV__c = TRUE, SBQQ__NetTotal__c / Term_Computed__c ,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEPRECATED - ARVCalc_2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>