objects/SBQQ__QuoteLine__c/fields/Backsolve_Goal__c.field-meta.xml
<CustomField>
    <fullName>Backsolve_Goal__c</fullName>
    <inlineHelpText>TBD</inlineHelpText>
    <label>Backsolve Total Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>