objects/SBQQ__QuoteLine__c/fields/Backsolve_Output__c.field-meta.xml
<CustomField>
    <fullName>Backsolve_Output__c</fullName>
    <formula>IF( 
 AND(  
    OR( SBQQ__DistributorDiscount__c == 0.00, ISBLANK( SBQQ__DistributorDiscount__c)),
     SBQQ__Quote__r.SBQQ__PriceBook__c == &apos;01s0e00000075HAAAY&apos;,
    !ISBLANK (Backsolve_Goal__c)),
((1-(( SBQQ__PackageListTotal__c *(1-Backsolve_Goal__c))/(1-SBQQ__PartnerDiscount__c))/((1-Term_Discount__c)*(1-Volume_Discount__c)*SBQQ__PackageListTotal__c))),

IF( 
 AND(  
    SBQQ__DistributorDiscount__c &gt; 0.00,
     SBQQ__Quote__r.SBQQ__PriceBook__c == &apos;01s0e00000075HAAAY&apos;,
    !ISBLANK (Backsolve_Goal__c)),
((1-((( SBQQ__PackageListTotal__c *(1-Backsolve_Goal__c))/(1-SBQQ__DistributorDiscount__c ))/(1-SBQQ__PartnerDiscount__c))/((1-Term_Discount__c)*(1-Volume_Discount__c)*SBQQ__PackageListTotal__c))),

0))



/*IF(
ISBLANK (Backsolve_Goal__c),Null,
((1-((SBQQ__ProratedListPrice__c *(1-Backsolve_Goal__c))/(1-SBQQ__PartnerDiscount__c))/((1-Term_Discount__c)*(1-
Volume_Discount__c)* SBQQ__ProratedListPrice__c)))
)
---
IF(
AND(
SBQQ__Quote__r.SBQQ__PricebookId__c == &apos;01s0e00000075HAAAY&apos;,
!ISBLANK (Backsolve_Goal__c)),
((1-((SBQQ__ProratedListPrice__c*(1-Backsolve_Goal__c))/(1-SBQQ__DistributorDiscount__c))/(1-SBQQ__PartnerDiscount__c))/((1-Term_Discount__c)*(1-Volume_Discount__c)*SBQQ__ProratedListPrice__c)),0
)
*/</formula>
    <label>Backsolve Output</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>