objects/SBQQ__QuoteLine__c/fields/BillingQuoteLineNetTotal__c.field-meta.xml
<CustomField>
    <fullName>BillingQuoteLineNetTotal__c</fullName>
    <description>Used for visual purpose to understand how this Quote Line Net Total would be billed to customer.</description>
    <formula>IF( SBQQ__Bundle__c, SBQQ__PackageTotal__c, 
 IF (Bundled_Product__c || (TEXT(SBQQ__OptionType__c)=&quot;Component&quot; || TEXT(SBQQ__OptionType__c)=&quot;Accessory&quot;),0, 
SBQQ__NetTotal__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quote Line Net Total billed to customer</inlineHelpText>
    <label>Billing Quote Line Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>