objects/SBQQ__QuoteLine__c/fields/Boomi_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Boomi_End_Date__c</fullName>
    <formula>End_Date__c +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Boomi End Date</label>
    <type>Date</type>
</CustomField>