objects/SBQQ__QuoteLine__c/fields/Boomi_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Boomi_Start_Date__c</fullName>
    <formula>SBQQ__StartDate__c +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Boomi Start Date</label>
    <type>Date</type>
</CustomField>