objects/SBQQ__QuoteLine__c/fields/Bundle_Type__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Type__c</fullName>
    <description>TwinField from Product and used in Summary Variable.</description>
    <label>Bundle Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Taas</fullName>
            </value>
            <value>
                <fullName>On Premise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>