objects/SBQQ__QuoteLine__c/fields/Bundled_Product__c.field-meta.xml
<CustomField>
    <fullName>Bundled_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom bundle tracker.  Twin Field from Product Option. Bundled Product is used for Billing Schedule Configurator and necessary to identify if a product is a bundle. This field will allow value to copy from Quote Line to Renewal Quote Line to ensure Billing Schedule for Renewals are correct.</description>
    <inlineHelpText>CPQ TwinField feature will copy the field value from QuoteLine to Subscription and Subscription to Renewal QuoteLine.</inlineHelpText>
    <label>Bundled Product</label>
    <type>Checkbox</type>
</CustomField>