objects/SBQQ__QuoteLine__c/fields/Calculated_Software_Spend__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Software_Spend__c</fullName>
    <formula>IF(
  AND(
    Include_In_Annualized_Software_Spend__c == True,
    OR(
      SBQQ__Quote__r.SBQQ__Account__r.Deployment_Method__c = &quot;Cloud&quot;,
      SBQQ__Quote__r.SBQQ__Account__r.Deployment_Method__c = &quot;Hybrid&quot;
    )
  ),
  IF(
    ISBLANK(SBQQ__ProrateMultiplier__c) || SBQQ__ProrateMultiplier__c = 1,
    SBQQ__NetTotal__c / SBQQ__SubscriptionTerm__c * 12,
    SBQQ__NetTotal__c / (SBQQ__SubscriptionTerm__c * SBQQ__ProrateMultiplier__c) * 12
  ),
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Software Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>