objects/SBQQ__QuoteLine__c/fields/CARR__c.field-meta.xml
<CustomField>
    <fullName>CARR__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DEPRECATED - CARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>