objects/SBQQ__QuoteLine__c/fields/Change_from_Programmatic_Discount__c.field-meta.xml
<CustomField>
    <fullName>Change_from_Programmatic_Discount__c</fullName>
    <defaultValue>(0)</defaultValue>
    <description>This field indicates the difference between the Total Discount field and the programmatically applied Tanium Partner Discount percentage. Set vis the Quote Line - After Insert flow.</description>
    <inlineHelpText>This field indicates the difference between the Total Discount field and the programmatically applied Tanium Partner Discount percentage.</inlineHelpText>
    <label>Change from Programmatic Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>