objects/SBQQ__QuoteLine__c/fields/COE_Approval_Needed_SKU__c.field-meta.xml
<CustomField>
    <fullName>COE_Approval_Needed_SKU__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Twin field from the Product record</description>
    <label>COE Approval Needed SKU</label>
    <type>Checkbox</type>
</CustomField>