objects/SBQQ__QuoteLine__c/fields/Count_AddOn_Modules__c.field-meta.xml
<CustomField>
    <fullName>Count_AddOn_Modules__c</fullName>
    <description>Count the number of New Add On products for Renewal and Amendment quotes.</description>
    <formula>IF( 
 OR(
   TEXT( Transaction_Type__c ) == &apos;New Customer&apos;,
   TEXT( Transaction_Type__c ) == &apos;Upsell&apos;),1
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count AddOn Modules</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>