objects/SBQQ__QuoteLine__c/fields/CreatedBy_Formula__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy_Formula__c</fullName>
    <formula>OR(SBQQ__Quote__r.CreatedBy.Alias =&quot;khind&quot; ,CreatedBy.Username=&quot;cpqdev@tanium.com&quot;)</formula>
    <label>CreatedBy Formula</label>
    <type>Checkbox</type>
</CustomField>