objects/SBQQ__QuoteLine__c/fields/Customer_Discount__c.field-meta.xml
<CustomField>
    <fullName>Customer_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ADDT&apos;L DISCOUNT (%)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>