objects/SBQQ__QuoteLine__c/fields/Customer_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Customer_Net_Price__c</fullName>
    <description>P&amp;P Unit Price before partner discount (includes other discount such as volume, term, additional discount)</description>
    <formula>/*IF( PartnerDiscount_2__c &lt;&gt; 0, SBQQ__NetPrice__c ,SBQQ__NetPrice__c/(1-PartnerDiscount_2__c))*/


IF(
AND(
 SBQQ__Quote__r.Business_Motion_Oppty__c &lt;&gt; &apos;MSP&apos;,
TEXT(Product_Group__c) = &apos;Software&apos;,
!SBQQ__Bundle__c),  Round( Net_Unit_Price__c /  Percent_to_Decimal__c,2),
SBQQ__CustomerPrice__c )</formula>
    <label>*Customer Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>