objects/SBQQ__QuoteLine__c/fields/Customer_Price_ARR_Amount__c.field-meta.xml
<CustomField>
    <fullName>Customer_Price_ARR_Amount__c</fullName>
    <label>Customer Price ARR Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>