objects/SBQQ__QuoteLine__c/fields/Customer_SW_Spend__c.field-meta.xml
<CustomField>
    <fullName>Customer_SW_Spend__c</fullName>
    <formula>IF(Include_In_Annualized_Software_Spend__c == True,
((SBQQ__NetPrice__c * SBQQ__EffectiveQuantity__c) / SBQQ__ProrateMultiplier__c),0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer SW Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>