objects/SBQQ__QuoteLine__c/fields/Customer_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Customer_Unit_Price__c</fullName>
    <description>This field is replacing the standard Customer Unit Price field due to the bundle line showing zero.</description>
    <label>DEPRECATED - Customer Unit-Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>