objects/SBQQ__QuoteLine__c/fields/Customer_Unit_Price_ARR_Amount__c.field-meta.xml
<CustomField>
    <fullName>Customer_Unit_Price_ARR_Amount__c</fullName>
    <description>Used in Price Rule</description>
    <label>Customer Unit Price ARR Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>