objects/SBQQ__QuoteLine__c/fields/Day_1_ARR__c.field-meta.xml
<CustomField>
    <fullName>Day_1_ARR__c</fullName>
    <description>The value represents the Day 1 amount of the ARR for this line item.  This field is set via CPQ Price Rule.</description>
    <label>Day 1 ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>