objects/SBQQ__QuoteLine__c/fields/Day_1_ARR_Formula__c.field-meta.xml
<CustomField>
    <fullName>Day_1_ARR_Formula__c</fullName>
    <formula>IF(
AND(
Exclude_from_ARR__c == False,
NOT(ISBLANK( Tanium_Pricing_Schedule__c)),
SBQQ__StartDate__c &lt;= Day_1_ARR_Start_Date__c,
End_Date__c &gt;=Day_1_ARR_Start_Date__c) ,
(( Unit_Price_Variance__c * SBQQ__EffectiveQuantity__c ) / SBQQ__ProrateMultiplier__c),

IF(
AND(
Exclude_from_ARR__c == False,
SBQQ__StartDate__c &lt;= Day_1_ARR_Start_Date__c,
End_Date__c &gt;=Day_1_ARR_Start_Date__c),
((SBQQ__NetPrice__c * SBQQ__EffectiveQuantity__c) / SBQQ__ProrateMultiplier__c),

0
)
)

/*
IF(AND(Include_in_Day_1_ARR_formula__c,NOT(Exclude_from_ARR__c),ISBLANK(Tanium_Pricing_Schedule__c)), (SBQQ__NetPrice__c * SBQQ__EffectiveQuantity__c) / SBQQ__ProrateMultiplier__c,IF(AND(Include_in_Day_1_ARR_formula__c,NOT(Exclude_from_ARR__c)),(Unit_Price_Variance__c * SBQQ__EffectiveQuantity__c) / SBQQ__ProrateMultiplier__c,0))
*/

/*[Backup]
IF(AND(Include_in_Day_1_ARR_formula__c,NOT(Exclude_from_ARR__c),ISBLANK(Tanium_Pricing_Schedule__c)), (SBQQ__NetPrice__c * SBQQ__EffectiveQuantity__c) / SBQQ__ProrateMultiplier__c,IF(AND(Include_in_Day_1_ARR_formula__c,NOT(Exclude_from_ARR__c)),(Unit_Price_Variance__c * SBQQ__Quantity__c) / SBQQ__ProrateMultiplier__c,0))
*/

/*

IF( AND ( ISPICKVAL(SBQQ__SubscriptionType__c, &apos;Renewable&apos;),NOT(ISBLANK( Tanium_Pricing_Schedule__c)),
SBQQ__StartDate__c==Day_1_ARR_Start_Date__c ),(( (Unit_Price_Variance__c * SBQQ__EffectiveQuantity__c ) /( of_days_between_dates__c )) * 365 ),
IF( AND( ISPICKVAL(SBQQ__SubscriptionType__c, &apos;Renewable&apos;),SBQQ__StartDate__c==Day_1_ARR_Start_Date__c ),((SBQQ__NetTotal__c /( of_days_between_dates__c )) * 365 ),0
)
)

*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day 1 ARR Formula</label>
    <precision>18</precision>
    <scale>12</scale>
    <type>Currency</type>
</CustomField>