objects/SBQQ__QuoteLine__c/fields/Deal_Desk_Approval_Needed__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Approval_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deal Desk Approval Needed</label>
    <type>Checkbox</type>
</CustomField>