objects/SBQQ__QuoteLine__c/fields/Deployment_Method__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Method__c</fullName>
    <description>Twin Field from Product. SS-8909.</description>
    <label>Deployment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On-Prem</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>