objects/SBQQ__QuoteLine__c/fields/Discount_Percent_Display__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent_Display__c</fullName>
    <formula>IF(
AND(
SBQQ__Quote__r.SBQQ__PriceBook__r.Name == &apos;Global Pricebook&apos;,
SBQQ__Bundle__c,
TEXT( Product_Line__c ) &lt;&gt; &apos;Appliance&apos;),
( SBQQ__ComponentListTotal__c - SBQQ__ComponentTotal__c )/ SBQQ__ComponentListTotal__c*1 ,
IF( SBQQ__ProratedListPrice__c==0,0,
IF(
AND(
SBQQ__Quote__r.SBQQ__PriceBook__r.Name == &apos;MSP Pricebook&apos;,
SBQQ__ProratedListPrice__c&gt;0),
SBQQ__TotalDiscountRate__c, End_customer_Discount__c
)
)
)

/*IF(SBQQ__ProratedListPrice__c=0,0,SBQQ__AdditionalDiscountAmount__c / SBQQ__ProratedListPrice__c)
IF( SBQQ__ProratedListPrice__c=0,0,
IF( AND(SBQQ__ProratedListPrice__c&gt;0, SBQQ__Quote__r.SBQQ__PricebookId__c == &quot;01s7V000000NyMZQA0&quot;),
SBQQ__TotalDiscountRate__c,
Customer_Discount__c
))
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>