objects/SBQQ__QuoteLine__c/fields/Distributor_Discount__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Discount__c</fullName>
    <description>To be displayed in the Edit Lines view only.</description>
    <formula>SBQQ__DistributorDiscount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>