objects/SBQQ__QuoteLine__c/fields/Do_Not_Roll_Up_for_ARR__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Roll_Up_for_ARR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flagged line items will not be included in ARR roll ups/calculations</description>
    <label>Do Not Roll Up for ARR</label>
    <type>Checkbox</type>
</CustomField>