objects/SBQQ__QuoteLine__c/fields/Eligible_ESR_Count__c.field-meta.xml
<CustomField>
    <fullName>Eligible_ESR_Count__c</fullName>
    <description>Counted as ESR SKU not including TAN-ESR-DEPLMT-EE SKU.

08-21-23 RAP - Updated the formula to account for Amendments. If the quote is an amendment and the effective quantity has increased to the positive, then set Eligible ESR Count to TRUE
11-08/23 KA - Removed the part in formula of capturing Amendment.</description>
    <formula>IF(
  AND( 
   
     SBQQ__ProductCode__c &lt;&gt; &apos;TAN-ESR-DEPLMT-EE&apos;,
     SBQQ__ProductCode__c &lt;&gt; &apos;TAN-PREM-ESR-1W&apos;,
  Is_ESR_Product__c,
  SBQQ__EffectiveQuantity__c &lt;&gt; 0 ), True,
False
)

/*Backup 4/22/2025
IF(
    AND(
        Is_ESR_Product__c,
SBQQ__ProductCode__c &lt;&gt; &apos;TAN-ESR-DEPLMT-EE&apos;,
SBQQ__EffectiveQuantity__c &lt;&gt; 0 ),
        /*OR(
            TEXT(SBQQ__Quote__r.SBQQ__Type__c) != &apos;Amendment&apos;,
            AND(   
                TEXT(SBQQ__Quote__r.SBQQ__Type__c) = &apos;Amendment&apos;
                SBQQ__EffectiveQuantity__c != SBQQ__EffectiveQuantity__c,*True,
    False
)


*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible ESR Count</label>
    <type>Checkbox</type>
</CustomField>