objects/SBQQ__QuoteLine__c/fields/Eligible_for_Renewal_ARR_Flow__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Renewal_ARR_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Price Rule to stamp Day 1 ARR Start Date. Updated by the Quote Line - Before Insert flow. SS-10607</description>
    <label>Eligible for Renewal ARR (Flow)</label>
    <type>Checkbox</type>
</CustomField>