objects/SBQQ__QuoteLine__c/fields/Eligible_Tanium_SoftwareARR__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Tanium_SoftwareARR__c</fullName>
    <formula>AND(
  OR(
    SBQQ__ProductFamily__c = &quot;Bundle&quot;,
    SBQQ__ProductFamily__c = &quot;Module&quot;,
    SBQQ__ProductFamily__c = &quot;Core&quot;
  ),
  LEFT(SBQQ__ProductCode__c, 4) = &quot;TAN-&quot;,
  Exclude_from_ARR__c = FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in Summary Variable to Sum the ARR Amount. SS-6919</inlineHelpText>
    <label>Eligible Tanium Software ARR</label>
    <type>Checkbox</type>
</CustomField>