objects/SBQQ__QuoteLine__c/fields/EligPartDiscAvgRollup__c.field-meta.xml
<CustomField>
    <fullName>EligPartDiscAvgRollup__c</fullName>
    <formula>IF( 
  AND( 
    NOT(ISBLANK(SBQQ__RenewedSubscription__c)), 
    SBQQ__EffectiveQuantity__c &gt; 0,  
    ISBLANK(  SBQQ__RequiredBy__c ), 
    ISPICKVAL( Transaction_Type__c , &quot;Renewal&quot;)), True, 
False
)</formula>
    <label>EligPartDiscAvgRollup</label>
    <type>Checkbox</type>
</CustomField>