objects/SBQQ__QuoteLine__c/fields/End_customer_Discount__c.field-meta.xml
<CustomField>
    <fullName>End_customer_Discount__c</fullName>
    <description>Fixed - #Error issue - sriram - 07/18/19</description>
    <formula>IF(SBQQ__ProratedListPrice__c = 0,0,( SBQQ__ProratedListPrice__c * SBQQ__EffectiveQuantity__c -  Quote_Net_Total__c )/ (SBQQ__ProratedListPrice__c * SBQQ__EffectiveQuantity__c))


/*
[Backup]
IF(SBQQ__ProratedListPrice__c = 0,0,( SBQQ__ProratedListPrice__c * SBQQ__Quantity__c -  Quote_Net_Total__c )/ (SBQQ__ProratedListPrice__c * SBQQ__Quantity__c))
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>