objects/SBQQ__QuoteLine__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>If(ISBLANK( SBQQ__EndDate__c),If(ISBLANK(SBQQ__Quote__r.SBQQ__EndDate__c) , End_Date_Formula__c -1,SBQQ__Quote__r.SBQQ__EndDate__c),SBQQ__EndDate__c)</description>
    <formula>IF( SBQQ__Product__r.Do_Not_Show_End_Date__c = TRUE, NULL,If(ISBLANK( SBQQ__EndDate__c),If(ISBLANK(SBQQ__Quote__r.SBQQ__EndDate__c) , End_Date_Formula__c -1,SBQQ__Quote__r.SBQQ__EndDate__c),SBQQ__EndDate__c))</formula>
    <inlineHelpText>Computed End Date based on Start Date &amp; Term</inlineHelpText>
    <label>End Date Comp</label>
    <type>Date</type>
</CustomField>