objects/SBQQ__QuoteLine__c/fields/End_Date_Comp_in_Synch__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Comp_in_Synch__c</fullName>
    <description>A temporary field that will identify where there are mismatches between End Date Comp and End Date Comp (EDW). Jira ticket SS-9992</description>
    <formula>EndDateCompEDW__c = End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date Comp in Synch</label>
    <type>Checkbox</type>
</CustomField>