objects/SBQQ__QuoteLine__c/fields/End_Date_for_Non_Training_Products__c.field-meta.xml
<CustomField>
    <fullName>End_Date_for_Non_Training_Products__c</fullName>
    <description>Field created to avoid Training Product&apos;s End Date printing on Quote Doc.
https://tanium.lightning.force.com/lightning/_classic/%2F5000e00001m07ZP?source=alohaHeader</description>
    <formula>/*IF(ISPICKVAL (Product_Type__c, &quot;Training&quot;),Null,End_Date__c)*/
IF(
ISPICKVAL( SBQQ__SubscriptionPricing__c , &quot;Fixed Price&quot;),End_Date__c,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date for Non Training Products</label>
    <type>Date</type>
</CustomField>