objects/SBQQ__QuoteLine__c/fields/End_user_Total__c.field-meta.xml
<CustomField>
    <fullName>End_user_Total__c</fullName>
    <formula>Customer_Net_Price__c * SBQQ__EffectiveQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End user Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>