objects/SBQQ__QuoteLine__c/fields/ESO_Days__c.field-meta.xml
<CustomField>
    <fullName>ESO_Days__c</fullName>
    <label>ESO Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>