objects/SBQQ__QuoteLine__c/fields/ESO_Terms__c.field-meta.xml
<CustomField>
    <fullName>ESO_Terms__c</fullName>
    <label>ESO Terms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>